# napari-help

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_help/: __init__.py  _widget.py  napari.yaml
src/napari_help/_tests/: test_widget.py
