[metadata]
name = napari_help
description = Helpful tooltips for napari.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brisvag/napari-help
author = Lorenzo Gaifas
author_email = brisvag@gmail.com
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/brisvag/napari-help/issues
    Documentation = https://github.com/brisvag/napari-help#README.md
    Source Code = https://github.com/brisvag/napari-help
    User Support = https://github.com/brisvag/napari-help/issues

[options]
packages = find:
install_requires =
    magicgui
    numpy
    qtpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-help = napari_help:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
